--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,34 +1,34 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
+<ion-header [translucent]="true" color="dark">
+  <ion-toolbar color="dark">
     <ion-title>
       Calculadora
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
+<ion-content [fullscreen]="true" color="dark">
   <ion-header collapse="condense">
-    <ion-toolbar>
+    <ion-toolbar color="dark">
       <ion-title size="large">Calculadora</ion-title>
     </ion-toolbar>
   </ion-header>
 
   <div id="container">
-    <ion-item>
+    <ion-item color="dark">
       <ion-label position="floating">Digite o primeiro número</ion-label>
       <ion-input type="number" [(ngModel)]="n1"></ion-input>
     </ion-item>
 
-    <ion-item>
+    <ion-item color="dark">
       <ion-label position="floating">Digite o segundo número</ion-label>
       <ion-input type="number" [(ngModel)]="n2"></ion-input>
-    </ion-item>
+    </ion-item><br>
 
-    <ion-button shape="round" expand="full" (click)="somar()" color="warning">
+    <ion-button shape="round" expand="full" (click)="somar()" color="success">
       <ion-icon name="add-circle"></ion-icon>
       Somar
     </ion-button>
 
-    <ion-input value="{{res}}"></ion-input>
+    <ion-input readonly="true" value="{{res}}"></ion-input>
   </div>
 </ion-content>
