Bigger result font-size

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -15,11 +15,11 @@
 
   <div id="container">
     <ion-item color="dark">
-      <ion-input inputmode="numeric" placeholder="Digite o primeiro número" type="number" [(ngModel)]="n1"></ion-input>
+      <ion-input placeholder="Digite o primeiro número" type="number" [(ngModel)]="n1"></ion-input>
     </ion-item><br>
 
     <ion-item color="dark">
-      <ion-input inputmode="numeric" placeholder="Digite o segundo número" type="number" [(ngModel)]="n2"></ion-input>
+      <ion-input placeholder="Digite o segundo número" type="number" [(ngModel)]="n2"></ion-input>
     </ion-item><br>
 
     <ion-row>
